--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 </head>
 <body class="bg-gradient-to-b from-[#0b0f14] to-[#0e1621] text-gray-200 font-sans min-h-screen">
 
-<!-- HEADER -->
 <header class="sticky top-0 z-10 bg-gray-900/80 backdrop-blur border-b border-gray-700">
   <div class="max-w-6xl mx-auto flex items-center justify-between px-4 py-3">
     <h1 class="text-xl font-semibold">
@@ -44,19 +43,16 @@
   </div>
 </header>
 
-<!-- MAIN -->
 <main class="max-w-4xl mx-auto p-4">
-  <section id="view-root" class="bg-gray-900 border border-gray-700 rounded-xl p-4 shadow-lg">
+  <section id="view"><div id="view-root" class="bg-gray-900 border border-gray-700 rounded-xl p-4 shadow-lg">
     Chargement…
-  </section>
+  </div></section>
 </main>
 
-<!-- FOOTER -->
 <footer class="text-center text-gray-500 text-sm py-6">
   V1 — GitHub Pages + Firebase Firestore (auth anonyme). Design minimal. ©
 </footer>
 
-<!-- DEBUG -->
 <div id="debug-drawer"></div>
 <script type="module">
   import { D } from "./schema.js";
@@ -73,11 +69,10 @@
   }
 </script>
 
-<!-- FIREBASE INIT -->
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
   import { getFirestore } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
-  import { initApp } from "./app.js";
+  import { initApp, renderAdmin } from "./app.js";
 
   const firebaseConfig = {
     apiKey: "AIzaSyAQcvZ9a2j4MHF04RjMHIey0R_iwnjZf4o",
@@ -100,7 +95,8 @@
   function boot() {
     const uid = getUidFromHash();
     if (!uid) {
-      location.hash = "#/admin"; // par défaut admin
+      location.hash = "#/admin";   // par défaut : admin
+      renderAdmin(db);             // rend directement la page admin
       return;
     }
     initApp({ app, db, user: { uid } });
