--- a/index.html
+++ b/index.html
@@ -35,18 +35,23 @@
     <h1 class="text-xl font-semibold">
       Tracker — <span class="text-sky-400">Habitudes</span> & <span class="text-sky-400">Pratique</span>
     </h1>
-    <nav class="flex gap-2 flex-wrap">
-      <button class="px-3 py-1 rounded-lg bg-gray-800 border border-gray-600 text-sm hover:bg-gray-700" data-route="#/admin">
-        Admin
-      </button>
+
+    <nav id="top-nav" class="flex gap-2">
+      <button class="px-3 py-1 rounded-xl border border-gray-600 bg-gray-800/70 hover:bg-gray-700 text-sm" data-route="#/daily">Journalier</button>
+      <button class="px-3 py-1 rounded-xl border border-gray-600 bg-gray-800/70 hover:bg-gray-700 text-sm" data-route="#/practice">Pratique</button>
+      <button class="px-3 py-1 rounded-xl border border-gray-600 bg-gray-800/70 hover:bg-gray-700 text-sm" data-route="#/goals">Objectifs</button>
     </nav>
+
+    <a href="#/admin" target="_blank" rel="noopener"
+       class="px-3 py-1 rounded-xl border border-gray-600 bg-gray-800/70 hover:bg-gray-700 text-sm">Admin</a>
   </div>
 </header>
-
-<main class="max-w-4xl mx-auto p-4">
-  <section id="view"><div id="view-root" class="bg-gray-900 border border-gray-700 rounded-xl p-4 shadow-lg">
-    Chargement…
-  </div></section>
+<main class="max-w-6xl mx-auto p-4">
+  <section id="view">
+    <div id="view-root" class="bg-gray-900/70 border border-gray-700 rounded-2xl p-5 shadow-lg">
+      Chargement…
+    </div>
+  </section>
 </main>
 
 <div id="debug-drawer" class="hidden"></div>
