--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
       --shadow: 0 10px 25px rgba(0,0,0,.25), 0 2px 6px rgba(0,0,0,.2);
     }
 
+    input, select, textarea {
+      width:100%;
+      background:#0f172a;
+      border:1px solid #334155;
+      color:#e5e7eb;
+      border-radius:12px;
+      padding:10px 12px;
+    }
+    input::placeholder, textarea::placeholder { color:#94a3b8; }
+    input:focus, select:focus, textarea:focus {
+      outline:none;
+      border-color:#60a5fa;
+      box-shadow:0 0 0 2px rgba(96,165,250,.35);
+    }
+
   </style>
 </head>
 <body class="bg-gradient-to-b from-[#0b0f14] to-[#0e1621] text-gray-200 font-sans min-h-screen">
@@ -25,14 +40,12 @@
       Tracker — <span class="text-sky-400">Habitudes</span> & <span class="text-sky-400">Pratique</span>
     </h1>
 
-    <nav id="top-nav" class="flex gap-2">
-      <button class="px-3 py-1 rounded-xl border border-gray-600 bg-gray-800/70 hover:bg-gray-700 text-sm" data-route="#/daily">Journalier</button>
-      <button class="px-3 py-1 rounded-xl border border-gray-600 bg-gray-800/70 hover:bg-gray-700 text-sm" data-route="#/practice">Pratique</button>
-      <button class="px-3 py-1 rounded-xl border border-gray-600 bg-gray-800/70 hover:bg-gray-700 text-sm" data-route="#/goals">Objectifs</button>
+    <nav class="flex gap-2 flex-wrap">
+      <button class="px-3 py-1 rounded-lg bg-gray-800 border border-gray-600 text-sm hover:bg-gray-700" data-route="#/daily">Journalier</button>
+      <button class="px-3 py-1 rounded-lg bg-gray-800 border border-gray-600 text-sm hover:bg-gray-700" data-route="#/practice">Pratique</button>
+      <button class="px-3 py-1 rounded-lg bg-gray-800 border border-gray-600 text-sm hover:bg-gray-700" data-route="#/goals">Objectifs</button>
+      <a class="ml-3 px-3 py-1 rounded-lg bg-gray-900 border border-gray-700 text-sm hover:bg-gray-800" href="#/admin">Admin</a>
     </nav>
-
-    <a href="#/admin" target="_blank" rel="noopener"
-       class="px-3 py-1 rounded-xl border border-gray-600 bg-gray-800/70 hover:bg-gray-700 text-sm">Admin</a>
   </div>
 </header>
 <main class="max-w-6xl mx-auto p-4">
