--- a/index.html
+++ b/index.html
@@ -3,65 +3,112 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tracker d’habitudes & Pratique délibérée</title>
+  <title>Habitudes & Pratique</title>
   <link rel="icon" type="image/svg+xml"
         href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🔥</text></svg>">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    :root {
-      color-scheme: dark light;
-      --bg:#0b0f14; --panel:#101823; --muted:#94a3b8; --text:#e5e7eb; --accent:#60a5fa;
-      --ok:#22c55e; --warn:#f59e0b; --bad:#ef4444; --border:#1f2937; --soft:#0e1621;
-      --shadow: 0 10px 25px rgba(0,0,0,.25), 0 2px 6px rgba(0,0,0,.2);
+    :root{
+      /* Pastel theme */
+      --bg:#f6f7fb; --ink:#111827; --muted:#6b7280;
+      --card:#ffffff; --ring:#e5e7eb; --shadow:0 10px 30px rgba(0,0,0,.06);
+      --primary:#93c5fd;    /* bleu doux — Journalier */
+      --secondary:#86efac;  /* vert doux — Pratique */
+      --violet:#c7b5ff;     /* violet doux — Objectifs */
+      --danger:#fca5a5; --warning:#fde68a; --ok:#86efac;
+
+      color-scheme: light;
+    }
+    html,body{height:100%}
+    body{
+      margin:0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Inter, Helvetica, Arial, sans-serif;
+      background: var(--bg); color: var(--ink);
     }
 
-    input, select, textarea {
-      width:100%;
-      background:#0f172a;
-      border:1px solid #334155;
-      color:#e5e7eb;
-      border-radius:12px;
-      padding:10px 12px;
-    }
-    input::placeholder, textarea::placeholder { color:#94a3b8; }
-    input:focus, select:focus, textarea:focus {
-      outline:none;
-      border-color:#60a5fa;
-      box-shadow:0 0 0 2px rgba(96,165,250,.35);
-    }
+    /* Layout */
+    header{ position:sticky; top:0; z-index:20; backdrop-filter: blur(6px); background:rgba(246,247,251,.75); border-bottom:1px solid var(--ring) }
+    .wrap{ max-width:1100px; margin:0 auto; padding:12px 16px }
+    .tabs{ display:flex; gap:8px; flex-wrap:wrap }
+    .tab{ padding:10px 14px; border:1px solid var(--ring); border-radius:999px; background:#fff; box-shadow:var(--shadow); cursor:pointer; font-weight:500 }
+    .tab:hover{ transform: translateY(-1px) }
+    .tab.primary{ background:linear-gradient(0deg,#fff, #eef6ff) }
+    main{ max-width:1100px; margin:16px auto; padding:0 16px }
+    footer{ color:var(--muted); font-size:12px; padding:24px 0 40px; text-align:center }
 
+    /* Primitives */
+    .card{ background:var(--card); border:1px solid var(--ring); border-radius:16px; box-shadow:var(--shadow); padding:16px }
+    .input, select, textarea{ width:100%; border:1px solid var(--ring); background:#fff; border-radius:12px; padding:10px 12px; outline:none }
+    textarea{ min-height:90px }
+    .btn{ display:inline-flex; align-items:center; gap:8px; border:1px solid var(--ring); background:#fff; border-radius:12px; padding:10px 14px; cursor:pointer; box-shadow:var(--shadow) }
+    .btn:hover{ transform: translateY(-1px) }
+    .btn.primary{ background:linear-gradient(0deg,#fff,#e7f1ff); border-color:#cfe3ff }
+    .btn.success{ background:linear-gradient(0deg,#fff,#e9fbf1); border-color:#c9f7dc }
+    .btn.ghost{ background:transparent }
+    .btn.small{ padding:8px 10px; font-size:12px }
+    .row{ display:grid; gap:12px }
+    .row.cols-2{ grid-template-columns: repeat(2,minmax(0,1fr)) }
+    .row.cols-3{ grid-template-columns: repeat(3,minmax(0,1fr)) }
+    @media (max-width:900px){ .row.cols-2,.row.cols-3{ grid-template-columns: 1fr } }
+
+    .section{ margin:12px 0 }
+    .section-title{ display:flex; justify-content:space-between; align-items:center; margin:6px 0 10px }
+
+    .chip{ padding:6px 10px; border:1px solid var(--ring); border-radius:999px; background:#fff; font-size:12px; cursor:pointer }
+    .chip.active{ background:var(--primary) }
+
+    .pill{ font-size:12px; border:1px solid var(--ring); border-radius:999px; padding:2px 8px; color:#374151 }
+
+    /* Modal */
+    .modal-backdrop{ position:fixed; inset:0; background:rgba(15,23,42,.28); backdrop-filter: blur(2px); display:flex; align-items:center; justify-content:center; z-index:50 }
+    .modal{ width:min(680px,92vw); background:#fff; border:1px solid var(--ring); border-radius:18px; box-shadow: var(--shadow); padding:16px }
+    .modal h3{ margin:0 0 8px 0 }
+    .modal .row{ margin-top:8px }
+
+    /* History colors (Likert / num) */
+    .dot{ width:10px; height:10px; border-radius:999px; display:inline-block; margin-right:6px }
+    .v-yes{ background: #34d399 } .v-ry{ background:#86efac } .v-med{ background:#fbbf24 }
+    .v-rn{ background:#fca5a5 } .v-no{ background:#ef4444 } .v-na{ background:#9ca3af }
+
+    /* hide admin sidebar container (kept for app.js) */
+    #sidebar{ display:none }
   </style>
 </head>
-<body class="bg-gradient-to-b from-[#0b0f14] to-[#0e1621] text-gray-200 font-sans min-h-screen">
+<body>
 
-<header class="sticky top-0 z-10 bg-gray-900/80 backdrop-blur border-b border-gray-700">
-  <div class="max-w-6xl mx-auto flex items-center justify-between px-4 py-3">
-    <h1 class="text-xl font-semibold">
-      Tracker — <span class="text-sky-400">Habitudes</span> & <span class="text-sky-400">Pratique</span>
-    </h1>
-
-    <nav class="flex gap-2 flex-wrap">
-      <button class="px-3 py-1 rounded-lg bg-gray-800 border border-gray-600 text-sm hover:bg-gray-700" data-route="#/daily">Journalier</button>
-      <button class="px-3 py-1 rounded-lg bg-gray-800 border border-gray-600 text-sm hover:bg-gray-700" data-route="#/practice">Pratique</button>
-      <button class="px-3 py-1 rounded-lg bg-gray-800 border border-gray-600 text-sm hover:bg-gray-700" data-route="#/goals">Objectifs</button>
-      <a class="ml-3 px-3 py-1 rounded-lg bg-gray-900 border border-gray-700 text-sm hover:bg-gray-800" href="#/admin">Admin</a>
-    </nav>
+<header>
+  <div class="wrap">
+    <div class="section-title">
+      <h1 style="margin:0;font-weight:700">Habitudes & Pratique</h1>
+      <nav class="tabs">
+        <button class="tab" data-route="#/daily">Journalier</button>
+        <button class="tab" data-route="#/practice">Pratique</button>
+        <button class="tab" data-route="#/goals">Objectifs</button>
+        <button class="tab" data-route="#/admin">Admin</button>
+      </nav>
+    </div>
   </div>
 </header>
-<main class="max-w-6xl mx-auto p-4">
+
+<main>
+  <!-- petit conteneur pour satisfaire app.js (mais masqué) -->
+  <aside id="sidebar" style="display:none">
+    <div id="profile-box"></div>
+    <div id="category-box"></div>
+  </aside>
+
   <section id="view">
-    <div id="view-root" class="bg-gray-900/70 border border-gray-700 rounded-2xl p-5 shadow-lg">
-      Chargement…
-    </div>
+    <div id="view-root" class="card">Chargement…</div>
   </section>
 </main>
+
+<footer>©</footer>
 
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
   import { getFirestore } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
   import { startRouter } from "./app.js";
 
-  const firebaseConfig = {
+  const cfg = {
     apiKey: "AIzaSyAQcvZ9a2j4MHF04RjMHIey0R_iwnjZf4o",
     authDomain: "tracking-d-habitudes.firebaseapp.com",
     projectId: "tracking-d-habitudes",
@@ -70,15 +117,11 @@
     appId: "1:739389871966:web:684e26dbdfb0c0a69221cf",
     measurementId: "G-ZPHWB5DKWF"
   };
-
-  const app = initializeApp(firebaseConfig);
+  const app = initializeApp(cfg);
   const db = getFirestore(app);
-
-  // One single entrypoint: the router decides “admin” vs “user”
   startRouter(app, db);
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
-
 </body>
 </html>
