Update SR logic and Likert defaults

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     }
 
     /* Pastilles de priorité */
-    .prio-chip {
+    .prio-chip { 
       display:inline-flex; align-items:center; gap:.4rem;
       padding:.15rem .5rem; border-radius:999px;
       font-size:.75rem; border:1px solid transparent;
@@ -88,6 +88,8 @@
     .prio-high   { background:#FEE2E2; border-color:#FCA5A5; color:#B91C1C; } /* rouge doux */
     .prio-medium { background:#FEF3C7; border-color:#FCD34D; color:#92400E; } /* ambre doux */
     .prio-low    { background:#E0F2FE; border-color:#BAE6FD; color:#075985; } /* bleu doux */
+
+    .btn-saved{ background:#22C55E; } /* vert doux rapide pour le flash */
   </style>
 </head>
 <body class="min-h-screen">
