--- a/index.html
+++ b/index.html
@@ -97,7 +97,12 @@
     <header class="border-b border-gray-200 bg-white">
       <div class="mx-auto w-full max-w-5xl px-4 py-4
             flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between">
-        <h1 class="text-lg sm:text-xl font-semibold">Habitudes &amp; Pratique</h1>
+        <h1 class="text-lg sm:text-xl font-semibold">
+          Habitudes &amp; Pratique
+          <span id="user-badge" style="margin-left:.5rem;color:#94a3b8;font-weight:600;">
+            — <span data-username>…</span>
+          </span>
+        </h1>
         <nav class="tabs w-full sm:w-auto overflow-x-auto no-scrollbar">
           <button class="tab" data-route="#/daily"><span>📅</span><span>Journalier</span></button>
           <button class="tab" data-route="#/practice"><span>⚡</span><span>Pratique</span></button>
