--- a/index.html
+++ b/index.html
@@ -116,8 +116,6 @@
     .goal-actions{ display:flex; justify-content:flex-end; gap:.5rem; }
     .goal-list{ margin-top:.5rem; padding-left:1.25rem; display:grid; gap:.35rem; list-style:disc; }
 
-    /* Masque l'onglet Admin s'il restait dans le DOM */
-    button[data-route="#/admin"] { display: none !important; }
   </style>
 </head>
 <body class="min-h-screen">
@@ -132,6 +130,7 @@
           </span>
         </h1>
         <nav class="tabs w-full sm:w-auto overflow-x-auto no-scrollbar">
+          <button class="tab" data-route="#/admin"><span>🛠️</span><span>Admin</span></button>
           <button class="tab" data-route="#/daily"><span>📅</span><span>Journalier</span></button>
           <button class="tab" data-route="#/practice"><span>⚡</span><span>Pratique</span></button>
           <button class="tab" data-route="#/goals"><span>🎯</span><span>Objectifs</span></button>
